KISS in progress not yet finished

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 
     <header class="header">
       <div class="header_wrapper">
-        <div class="section_wrapper section header flex_container">
+        <div class="section_wrapper section header flex_container flex">
           <h2 class="logo">
             ReMotely
           </h2>
 
-          <nav class="nav flex_container">
-            <ul class="link_flex_container">
+          <nav class="nav flex flex_container">
+            <ul class="link_flex_container flex-justify-end">
               <li><a class="links" href="#">book</a></li>
               <li><a class="links" href="#">explore</a></li>
               <li><a class="links" href="#">about</a></li>
             </ul>
-            <div class="sign_container">
+            <div class="sign_container flex">
               <a class="sign" href="#">sign in</a>
             </div>
           </nav>
@@ -39,18 +39,18 @@
 
     <section class="green_section">
       <div class=" section_hero">
-        <div class="section_container">
-          <div class="column phrase">
+        <div class="section_container flex-j-center flex">
+          <div class="column flex-end-alignment phrase">
             <div class="catch_phrase">
               <h1 class="invite_phrase">
                 Work from a&nbsp;cabin near Helsinki
               </h1>
-              <div class=button_container>
+              <div class= "button_container flex">
                 <button class="btn" type="submit">Explore</button>
               </div>
             </div>
           </div>
-          <div class="column cottage">
+          <div class="column flex-end-alignment cottage">
             <div class="photo">
               <img class="main_photo" src="./switzphoto.jpg" alt="Swiss Cottage">
             </div>
@@ -65,18 +65,18 @@
         We offer a handpicked range of cabins for nature lovers in Europe to live and work
         from for desired time.
       </h2>
-      <div class="all_pros_container">
+      <div class="flex-j-center flex">
         <div class="pros_container">
           <div class="photo_description_container">
             <div class="pros_photo">
               <img class="pros_pic" src="./forest.png" alt="pic of pros">
             </div>
-            <div class="header_container">
+            <div class="header_container flex-j-center flex">
               <h3 class="paragraph_header">Connection</h3>
             </div>
-            <div class="paragraph_description flex-j-center">
+            <div class="paragraph_description flex-j-center flex">
               <p class="text">
-                We provide a good internet connection <br>  in our remotest cabins
+                We provide a good internet connection in our remotest cabins
               </p>
             </div>
           </div>
@@ -86,14 +86,14 @@
             <div class="pros_photo high_way">
               <img class="pros_pic" src="./highway.png" alt="pic of pros">
             </div>
-            <div class="header_container flex-j-center">
+            <div class="header_container flex-j-center flex">
               <h3 class="paragraph_header">
                 Accesibility
               </h3>
             </div>
-            <div class="paragraph_description">
+            <div class="paragraph_description flex-j-center flex">
               <p class="text">
-                Every Cabin is up in the nature but also <br> easy to get to and to the towns around
+                Every Cabin is up in the nature but also easy to get to and to the towns around
               </p>
             </div>
           </div>
@@ -106,8 +106,8 @@
             <div class="header_container">
               <h3 class="paragraph_header">Close to nature</h3>
             </div>
-            <div class="paragraph_description">
-              <p class="text">Every cabin means different areas to <br> explore!</p>
+            <div class="paragraph_description flex-j-center flex">
+              <p class="text">Every cabin means different areas to explore!</p>
             </div>
           </div>
         </div>
@@ -116,20 +116,20 @@
     
     <section class="pink">
       <div class="flex section_wrapper">
-        <div class="left_side">
+        <div class="left_side flex-j-center flex">
           <div class="some_text">
             <h2 class="third_page_header">
               Work from somewhere special
             </h2>
             <p class="longer_paragraph">
-              We gather people who love nature and <br> mountains and help them find perfect
+              We gather people who love nature and mountains and help them find perfect
               spots
-              for <br> a few weeks or even
+              for a few weeks or even
               months.
-              If your job is fully <br> remote and you daydream of holidays, then why <br> sit at home? Work as you
+              If your job is fully remote and you daydream of holidays, then why sit at home? Work as you
               normally
               do and
-              later <br> let yourself dive into nature. Break the habit.
+              later let yourself dive into nature. Break the habit.
             </p>
           </div>
           <div class="btn_third_sector">
@@ -147,18 +147,18 @@
 
     <section class=" fourth_page_container">
       <div class="flex section_wrapper">
-      <div class="left_side_fourth_page">
+      <div class="left_side_fourth_page flex-end-alignment">
         <div>
           <img class="girl_pic" src="./girl.png" alt="girl pic">
         </div>
       </div>
-      <div class="right_side_fourth_page">
-        <div class="fan_number">
-          <p class="cabin_lovers">
-            +2,000<br>cabin lovers
-          </p>
+      <div class="right_side_fourth_page flex">
+        <div class="fan_number flex">
+          <h1 class="cabin_lovers">
+            +2,000 cabin lovers
+          </h1>
         </div>
-        <div class="autor">
+        <div class="autor flex-end-alignment">
           <p class="fourth_page_footer">
             Marina Skovic, Visual Artist
           </p>
@@ -182,7 +182,7 @@
 
     <section class="section fifth_page_container">
       <div class="flex section_wrapper">
-      <div class="newsletter">
+      <div class="newsletter flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
             <label for="newsletter_header" class="newsletter_info"> newsletter comming soon</label>
@@ -192,21 +192,21 @@
           </div>
         </div>
       </div>
-      <div class="bot_nav_container">
+      <div class="bot_nav_container flex-end-alignment">
         <ul class="ul_container">
-          <li class="nav"><a class="bot_list" href="#">Help Center</a></li>
-          <li class="nav"><a class="bot_list" href="#">Facebook</a></li>
-          <li class="nav"><a class="bot_list" href="#">About</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">Help Center</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">Facebook</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">About</a></li>
         </ul>
         <ul class="ul_container">
-          <li class="nav"><a class="bot_list" href="#">FAQ</a></li>
-          <li class="nav"><a class="bot_list"  href="#">Contact</a></li>
-          <li class="nav"><a class="bot_list" href="#">Instagram</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">FAQ</a></li>
+          <li class="nav flex"><a class="bot_list"  href="#">Contact</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">Instagram</a></li>
         </ul>
         <ul class="ul_container">
-          <li class="nav"><a class="bot_list" href="#">Blog</a></li>
-          <li class="nav"><a class="bot_list" href="#">Reviews</a></li>
-          <li class="nav"><a class="bot_list" href="#">Twitter</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">Blog</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">Reviews</a></li>
+          <li class="nav flex"><a class="bot_list" href="#">Twitter</a></li>
       </div>
     </div>
     </section>
@@ -215,9 +215,9 @@
 
     <footer class="section section_wrapper">
       <div class="last_footer_wrapper">
-        <div class="last_footer">
-          <div class="footer_box">
-            <ul class="footer_list">
+        <div class="last_footer flex-justify-end">
+          <div class="footer_box flex-end-alignment">
+            <ul class="footer_list flex-justify-end">
               <li class="footer_par"><a class="foot_link" href="#">&copy; 2020 Remotely</a></li>
               <li class="footer_par"><a class="foot_link" href="#">Privacy Policy</a></li>
               <li class="footer_par"><a class="foot_link" href="#">Terms and Conditions</a></li>
