--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 
     <header class="header">
       <div class="header_wrapper">
-        <div class="section_wrapper section header flex_container flex">
-          <h2 class="logo">
+        <div class="section_wrapper max_width section header flex_container flex">
+          <h2 class="font_size">
             ReMotely
           </h2>
 
           <nav class="nav flex flex_container">
             <ul class="link_flex_container flex-justify-end">
-              <li><a class="links" href="#">book</a></li>
-              <li><a class="links" href="#">explore</a></li>
-              <li><a class="links" href="#">about</a></li>
+              <li><a class="links font_size text_deco_none text_transform" href="#">book</a></li>
+              <li><a class="links font_size text_deco_none text_transform" href="#">explore</a></li>
+              <li><a class="links font_size  text_deco_none text_transform" href="#">about</a></li>
             </ul>
-            <div class="sign_container flex">
-              <a class="sign" href="#">sign in</a>
+            <div class="flex-justify-end">
+              <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
             </div>
           </nav>
         </div>
@@ -39,7 +39,7 @@
 
     <section class="green_section">
       <div class=" section_hero">
-        <div class="section_container flex-j-center flex">
+        <div class="section_container flex-j-center">
           <div class="column flex-end-alignment phrase">
             <div class="catch_phrase">
               <h1 class="invite_phrase">
@@ -65,16 +65,16 @@
         We offer a handpicked range of cabins for nature lovers in Europe to live and work
         from for desired time.
       </h2>
-      <div class="flex-j-center flex">
+      <div class="flex-j-center">
         <div class="pros_container">
           <div class="photo_description_container">
-            <div class="pros_photo">
+            <div class="pros_photo constant_width">
               <img class="pros_pic" src="./forest.png" alt="pic of pros">
             </div>
-            <div class="header_container flex-j-center flex">
+            <div class="constant_width flex-j-center">
               <h3 class="paragraph_header">Connection</h3>
             </div>
-            <div class="paragraph_description flex-j-center flex">
+            <div class="paragraph_description constant_width flex-j-center">
               <p class="text">
                 We provide a good internet connection in our remotest cabins
               </p>
@@ -83,15 +83,15 @@
         </div>
         <div class="pros_container">
           <div class="photo_description_container">
-            <div class="pros_photo high_way">
+            <div class="pros_photo constant_width high_way">
               <img class="pros_pic" src="./highway.png" alt="pic of pros">
             </div>
-            <div class="header_container flex-j-center flex">
+            <div class="hconstant_width flex-j-center">
               <h3 class="paragraph_header">
                 Accesibility
               </h3>
             </div>
-            <div class="paragraph_description flex-j-center flex">
+            <div class="paragraph_description constant_width flex-j-center">
               <p class="text">
                 Every Cabin is up in the nature but also easy to get to and to the towns around
               </p>
@@ -100,13 +100,13 @@
         </div>
         <div class="pros_container">
           <div class="photo_description_container">
-            <div class="pros_photo">
+            <div class="pros_photo constant_width">
               <img class="pros_pic" src="./mountains.png" alt="pic of pros">
             </div>
-            <div class="header_container">
+            <div class="constant_width flex-j-center">
               <h3 class="paragraph_header">Close to nature</h3>
             </div>
-            <div class="paragraph_description flex-j-center flex">
+            <div class="paragraph_description constant_width flex-j-center">
               <p class="text">Every cabin means different areas to explore!</p>
             </div>
           </div>
@@ -115,9 +115,9 @@
     </section>
     
     <section class="pink">
-      <div class="flex section_wrapper">
-        <div class="left_side flex-j-center flex">
-          <div class="some_text">
+      <div class="flex section_wrapper max_width">
+        <div class="left_side flex-j-center">
+          <div class="some_text constant_width">
             <h2 class="third_page_header">
               Work from somewhere special
             </h2>
@@ -132,7 +132,7 @@
               later let yourself dive into nature. Break the habit.
             </p>
           </div>
-          <div class="btn_third_sector">
+          <div class="constant_width">
             <button class="book_now" type="submit">
               <span class="book">Book Now</span>
             </button>
@@ -146,7 +146,7 @@
 
 
     <section class=" fourth_page_container">
-      <div class="flex section_wrapper">
+      <div class="flex section_wrapper max_width">
       <div class="left_side_fourth_page flex-end-alignment">
         <div>
           <img class="girl_pic" src="./girl.png" alt="girl pic">
@@ -162,15 +162,15 @@
           <p class="fourth_page_footer">
             Marina Skovic, Visual Artist
           </p>
-          <ul class="unordered_list_for_numbers">
+          <ul class="unordered_list_for_numbers flex-justify-end">
             <li class="numbers_fourth_page">
-              <a class="anchor_number" href="#">1</a>
+              <a class="text_deco_none anchor_color" href="#">1</a>
             </li>
             <li class="numbers_fourth_page">
-              <a class="anchor_number" href="#">2</a>
+              <a class="text_deco_none anchor_color" href="#">2</a>
             </li>
             <li class="numbers_fourth_page">
-              <a class="anchor_number" href="#">3</a>
+              <a class="text_deco_none anchor_color" href="#">3</a>
             </li>
           </ul>
         </div>
@@ -181,7 +181,7 @@
 
 
     <section class="section fifth_page_container">
-      <div class="flex section_wrapper">
+      <div class="flex section_wrapper max_width">
       <div class="newsletter flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
@@ -194,33 +194,33 @@
       </div>
       <div class="bot_nav_container flex-end-alignment">
         <ul class="ul_container">
-          <li class="nav flex"><a class="bot_list" href="#">Help Center</a></li>
-          <li class="nav flex"><a class="bot_list" href="#">Facebook</a></li>
-          <li class="nav flex"><a class="bot_list" href="#">About</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Help Center</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Facebook</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">About</a></li>
         </ul>
         <ul class="ul_container">
-          <li class="nav flex"><a class="bot_list" href="#">FAQ</a></li>
-          <li class="nav flex"><a class="bot_list"  href="#">Contact</a></li>
-          <li class="nav flex"><a class="bot_list" href="#">Instagram</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">FAQ</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color"  href="#">Contact</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Instagram</a></li>
         </ul>
         <ul class="ul_container">
-          <li class="nav flex"><a class="bot_list" href="#">Blog</a></li>
-          <li class="nav flex"><a class="bot_list" href="#">Reviews</a></li>
-          <li class="nav flex"><a class="bot_list" href="#">Twitter</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Blog</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Reviews</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Twitter</a></li>
       </div>
     </div>
     </section>
 
 
 
-    <footer class="section section_wrapper">
+    <footer class="section section_wrapper max_width">
       <div class="last_footer_wrapper">
         <div class="last_footer flex-justify-end">
           <div class="footer_box flex-end-alignment">
             <ul class="footer_list flex-justify-end">
-              <li class="footer_par"><a class="foot_link" href="#">&copy; 2020 Remotely</a></li>
-              <li class="footer_par"><a class="foot_link" href="#">Privacy Policy</a></li>
-              <li class="footer_par"><a class="foot_link" href="#">Terms and Conditions</a></li>
+              <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">&copy; 2020 Remotely</a></li>
+              <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">Privacy Policy</a></li>
+              <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">Terms and Conditions</a></li>
             </ul>
           </div>
         </div>
