--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
           <nav class="nav flex flex_container">
             <ul class="link_flex_container flex-justify-end">
-              <li><a class="links font_size text_deco_none text_transform" href="#">book</a></li>
-              <li><a class="links font_size text_deco_none text_transform" href="#">explore</a></li>
-              <li><a class="links font_size  text_deco_none text_transform" href="#">about</a></li>
+              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
+              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
+              <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
             </ul>
             <div class="flex-justify-end">
               <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
@@ -67,53 +67,46 @@
       </h2>
       <div class="flex-j-center">
         <div class="pros_container">
-          <div class="photo_description_container">
-            <div class="pros_photo constant_width">
+            <div class="pros_photo ">
               <img class="pros_pic" src="./forest.png" alt="pic of pros">
             </div>
-            <div class="constant_width flex-j-center">
+            <div class="flex-j-center">
               <h3 class="paragraph_header">Connection</h3>
             </div>
-            <div class="paragraph_description constant_width flex-j-center">
+            <div class="paragraph_description flex-j-center">
               <p class="text">
                 We provide a good internet connection in our remotest cabins
               </p>
             </div>
-          </div>
         </div>
         <div class="pros_container">
-          <div class="photo_description_container">
-            <div class="pros_photo constant_width high_way">
+            <div class="pros_photo">
               <img class="pros_pic" src="./highway.png" alt="pic of pros">
             </div>
-            <div class="hconstant_width flex-j-center">
+            <div class="flex-j-center">
               <h3 class="paragraph_header">
                 Accesibility
               </h3>
             </div>
-            <div class="paragraph_description constant_width flex-j-center">
+            <div class="paragraph_description flex-j-center">
               <p class="text">
                 Every Cabin is up in the nature but also easy to get to and to the towns around
               </p>
             </div>
-          </div>
         </div>
         <div class="pros_container">
-          <div class="photo_description_container">
-            <div class="pros_photo constant_width">
+            <div class="pros_photo">
               <img class="pros_pic" src="./mountains.png" alt="pic of pros">
             </div>
-            <div class="constant_width flex-j-center">
+            <div class="flex-j-center">
               <h3 class="paragraph_header">Close to nature</h3>
             </div>
-            <div class="paragraph_description constant_width flex-j-center">
+            <div class="paragraph_description flex-j-center">
               <p class="text">Every cabin means different areas to explore!</p>
             </div>
-          </div>
         </div>
       </div>
     </section>
-    
     <section class="pink">
       <div class="flex section_wrapper max_width">
         <div class="left_side flex-j-center">
@@ -134,7 +127,7 @@
           </div>
           <div class="constant_width">
             <button class="book_now" type="submit">
-              <span class="book">Book Now</span>
+              Book Now
             </button>
           </div>
         </div>
@@ -185,14 +178,14 @@
       <div class="newsletter flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
-            <label for="newsletter_header" class="newsletter_info"> newsletter comming soon</label>
+            <label for="email newsletter_info" class="newsletter_info"> newsletter comming soon</label>
           </div>
           <div class="input_input">
-            <input type="email" class="email" placeholder="your e-mail address">
+            <input type="email" class="email newsletter_info" placeholder="your e-mail address">
           </div>
         </div>
       </div>
-      <div class="bot_nav_container flex-end-alignment">
+      <div class="bot_nav_container flex-end-alignment flex-justify-end">
         <ul class="ul_container">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Help Center</a></li>
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Facebook</a></li>
