cleared and fixed minor changes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section class="pink">
       <div class="flex section_wrapper max_width">
         <div class="left_side flex-j-center">
-          <div class="some_text constant_width">
+          <div class="post_text constant_width">
             <h2 class="third_page_header">
               Work from somewhere special
             </h2>
@@ -160,10 +160,10 @@
               <a class="text_deco_none anchor_color" href="#">1</a>
             </li>
             <li class="numbers_fourth_page">
-              <a class="text_deco_none anchor_color" href="#">2</a>
+              <a class="text_deco_none number_color" href="#">2</a>
             </li>
             <li class="numbers_fourth_page">
-              <a class="text_deco_none anchor_color" href="#">3</a>
+              <a class="text_deco_none number_color" href="#">3</a>
             </li>
           </ul>
         </div>
@@ -174,7 +174,7 @@
 
 
     <section class="section fifth_page_container">
-      <div class="flex section_wrapper max_width">
+      <div class=" section_wrapper max_width flex-justify-end">
       <div class="newsletter flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
