post_container changed its name

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section class="pink">
       <div class="flex section_wrapper max_width">
         <div class="left_side flex-j-center">
-          <div class="post_text constant_width">
+          <div class="post_container constant_width">
             <h2 class="third_page_header">
               Work from somewhere special
             </h2>
