fixing in progress

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
     <section class=" fourth_page_container">
-      <div class="flex section_wrapper max_width">
+      <div class="flex section_wrapper max_width padding">
       <div class="left_side_fourth_page flex-end-alignment">
         <div>
           <img class="girl_pic" src="./girl.png" alt="girl pic">
@@ -175,7 +175,7 @@
 
     <section class="section fifth_page_container">
       <div class=" section_wrapper max_width flex-justify-end">
-      <div class="newsletter flex-end-alignment">
+      <div class="newsletter padding_footer flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
             <label for="email newsletter_info" class="newsletter_info"> newsletter comming soon</label>
