problem with sizes on nav section trying to fix it

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <header class="header">
       <div class="header_wrapper">
         <div class="section_wrapper max_width section header flex_container flex">
-          <h2 class="font_size">
+          <h2 class="font_size logo_margin">
             ReMotely
           </h2>
 
-          <nav class="nav flex flex_container">
+          <nav class="flex-justify-end nav_margin flex_container">
             <ul class="link_flex_container flex-justify-end">
               <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
               <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
               <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
             </ul>
-            <div class="flex-justify-end">
+            <div class="flex-justify-end margin_menu">
               <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
             </div>
           </nav>
@@ -174,8 +174,8 @@
 
 
     <section class="section fifth_page_container">
-      <div class=" section_wrapper max_width flex-justify-end">
-      <div class="newsletter padding_footer flex-end-alignment">
+      <div class=" section_wrapper max_width flex">
+      <div class="newsletter margin_footer flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
             <label for="email newsletter_info" class="newsletter_info"> newsletter comming soon</label>
@@ -185,20 +185,20 @@
           </div>
         </div>
       </div>
-      <div class="bot_nav_container flex-end-alignment flex-justify-end">
-        <ul class="ul_container">
+      <div class="bot_nav_container flex-end-alignment">
+        <ul class="ul_container_left">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Help Center</a></li>
-          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Facebook</a></li>
-          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">About</a></li>
-        </ul>
-        <ul class="ul_container">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">FAQ</a></li>
-          <li class="nav flex"><a class="bot_list text_deco_none anchor_color"  href="#">Contact</a></li>
-          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Instagram</a></li>
-        </ul>
-        <ul class="ul_container">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Blog</a></li>
+        </ul>
+        <ul class="ul_container_center">
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">About</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color"  href="#">Contact</a></li>
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Reviews</a></li>
+        </ul>
+        <ul class="ul_container_right">
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Facebook</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Instagram</a></li>
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Twitter</a></li>
       </div>
     </div>
