ok I think I finished this part

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="right_side_fourth_page flex">
         <div class="fan_number flex">
           <h1 class="cabin_lovers">
-            +2,000 cabin lovers
+            +2,000 <br> cabin lovers
           </h1>
         </div>
         <div class="autor flex-end-alignment">
